<resources>
    <string name="app_name">Umóvel</string>
    <string name="app_tag">Precisou? Chamou!</string>
    <string name="text_important_note_title">Important Note :</string>
    <string name="text_important_note">Greetings, Thank you for taking interest in Virtugos, We have put in a lot of efforts in developing the software and we will continue to provide you the same, and lot more in future. \nThis is to note that the software is owned by Virtugos &amp; , and anybody selling or redirecting you from any other sites to be considered scammers. We think that our customers must be satisfied and happy to deal with us, and save them from lending money in wrong hands.\n For Inquires, Customisation, Support &amp; Installation, Please contact the below sites,</string>
    <string name="text_important_note1">Greetings, Thank you for taking interest in Virtugos, We have put in a lot of efforts in developing the software and we will continue to provide you the same, and lot more in future.</string>
    <string name="text_important_note2">This is to note that the software is owned by Virtugos and anybody selling or redirecting you from any other sites to be considered scammers. We think that our customers must be satisfied and happy to deal with us, and save them from lending money in wrong hands.</string>
    <string name="text_important_note3">For Inquires, Customisation, Support &amp; Installation, Please contact the below sites,</string>
    <string name="text_important_link">https://www.virtugos.com.br</string>
    <string name="text_important_note4">Thank you for paying attention.\nRegards,\nVirtugos</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_fname">PRIMEIRO NOME</string>
    <string name="text_lname">ÚLTIMO NOME</string>
    <string name="text_email">E-MAIL</string>
    <string name="text_email_hint">Insira o ID de e-mail</string>
    <string name="text_number">NÚMERO</string>
    <string name="text_number_hint">Número</string>
    <string name="text_passs">SENHA</string>
    <string name="text_pass_hint">Insira a senha</string>
    <string name="text_pass_current">SENHA ATUAL</string>
    <string name="text_pass_current_hint">Insira senha atual</string>
    <string name="text_pass_new">NOVA SENHA</string>
    <string name="text_pass_new_hint">Insira nova senha</string>
    <string name="text_pass_retype">CONFIRME NOVA SENHA</string>
    <string name="text_pass_retype_hint">Confirme a nova senha</string>
    <string name="text_address">ENDEREÇO</string>
    <string name="text_bio">BIO</string>
    <string name="text_zip">CEP</string>
    <string name="text_google">GOOGLE</string>
    <string name="text_facebook">FACEBOOK</string>
    <string name="text_next">PRÓXIMO</string>
    <string name="text_signin">Entrar</string>
    <string name="reason1">Motorista Atrasado.</string>
    <string name="reason2">Mudei de ideia.</string>
    <string name="reason3">Chamei outro motorista.</string>
    <string name="text_back">Voltar</string>
    <string name="text_mything">MEU PERFIL</string>
    <string name="text_desc1">IDADE</string>
    <string name="text_desc2">TIPO</string>
    <string name="text_comment">Escreva sobre sua experiência. Estamos sempre felizes em ouvir você.</string>
    <string name="text_register">Registrar</string>
    <string name="text_copyright">Powered by Criptus Web</string>
    <string name="text_signin_with">Entrar com</string>
    <string name="text_username">usuário</string>
    <string name="text_username_hint">Insira o e-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_password_hint">Insira a senha</string>
    <string name="text_credit_card_number">Número do cartão de crédito</string>
    <string name="text_credit_card_holder">NOME IMPRESSO NO CARTÃO</string>
    <string name="text_mm">mm</string>
    <string name="text_yy">aa</string>
    <string name="text_cvc">cvv</string>
    <string name="text_addpayment">ADD PAGAMENTO</string>
    <string name="dialog_delete_card">Apagar Cartão</string>
    <string name="dialog_delete_event">Apagar Evento</string>
    <string name="dialog_delete_card_text">Você tem certeza?</string>
    <string name="text_submit">Enviar</string>
    <string name="text_apply">APLICAR</string>
    <string name="text_register_with">Cadastrar com</string>
    <string name="text_or">ou</string>
    <string name="text_forgetpass">Esqueceu a senha?</string>
    <string name="text_upload_picture">Enviar imagem de</string>
    <string name="text_estTime">Tempo est.</string>
    <string name="text_estTimeWithColon">Tempo esti:</string>
    <string name="text_make_request">Chame um Motorista!</string>
    <string name="text_add_card">Add Cartão de Crédito</string>
    <string name="text_remove">Remover</string>
    <string name="text_skip_card"><u>Você pode pular</u></string>
    <string name="text_scan">Scanear Cartão</string>
    <string name="text_add_manually">Add Manual</string>
    <string name="text_contacting">Procurando motoristas próximos</string>
    <string name="text_waiting_for_confirm">ESPERE PARA O MOTORISTA CONFIRMAR</string>
    <string name="text_creating_request">CHAMANDO MOTORISTA</string>
    <string name="text_changing_default_card">ALTERAR CARTÃO PADRÃO</string>
    <string name="text_deleting_card">APAGAR CARTÃO</string>
    <string name="text_deleting_event">APAGAR EVENTO</string>
    <string name="text_success_delete_card">cartão apagado com sucesso.</string>
    <string name="text_success_delete_event">Evento apagado com sucesso.</string>
    <string name="text_changing_payment_mode">ALTERAR MEIO DE PAGAMENTO</string>
    <string name="text_canceling_request">CANCELANDO CHAMADA</string>
    <string name="text_adding_dest">ADD DESTINO</string>
    <string name="text_registering">REGISTRANDO</string>
    <string name="text_adding_event">ADD EVENTO</string>
    <string name="text_getting_event">OBTENDO EVENTO</string>
    <string name="text_rating">AVALIAÇÃO</string>
    <string name="text_apply_promo">APLICAR CÓDIGO DE PROMOÇÃO</string>
    <string name="text_cancel">CANCELAR</string>
    <string name="text_cancel_trip">Cancelar</string>
    <string name="text_pickmeup">Definiar local de embarque</string>
    <string name="text_contact">CHAMAR MOTORISTA</string>
    <string name="text_name">NOME</string>
    <string name="text_gallary">GALERIA</string>
    <string name="text_ok">OK</string>
    <string name="text_camera">CÂMERA</string>
    <string name="text_call">LIGAR</string>
    <string name="text_choosepicture">SELECIONAR IMAGEM</string>
    <string name="text_getting_direction">OBTENDO ROTA</string>
    <string name="text_update">ATUALIZAR</string>
    <string name="text_my_location">Meu local</string>
    <string name="text_drive_location">Localização do motorista</string>
    <string name="text_miles">KM</string>
    <string name="text_mins">mins</string>
    <string name="progress_loading">CARREGANDO </string>
    <string name="toast_register_success">Você se registrou com sucesso!</string>
    <string name="ok">OK</string>
    <string name="toast_update_success">Perfil atualizado com sucesso</string>
    <string name="dialog_logout">Sair</string>
    <string name="dialog_logout_text">Tem certeza?</string>
    <string name="profile">Perfil</string>
    <string name="payment">PAGAMENTO</string>
    <string name="adding_payment">ADD CARTÃO</string>
    <string name="text_getting_ref_code">OBTER CÓDIGO DE REFERÊNCIA </string>
    <string name="text_please_wait">ESPERE POR FAVOR </string>
    <string name="text_getting_tours">OBTENDO CORRIDA </string>
    <string name="text_booking_tours">AGANDAR CORRIDA </string>
    <string name="text_share">Compartilhar</string>
    <string name="text_share_app">Compartilhar Umóvel!</string>
    <string name="text_rate_ride">AVALIE SUA CORRIDA</string>
    <string name="payment_unit">R$</string>
    <string name="text_for">para</string>
    <string name="text_per">/</string>
    <string name="text_min">min</string>
    <string name="text_carid">Tipo de Veículo</string>
    <string name="text_plate_no">Placa.</string>
    <string name="text_delete_msg">Mensagem apagada.</string>
    <string name="text_device_registered">Aparelho registrado</string>
    <string name="text_device_unregistered">Aparelho não registrado</string>
    <string name="text_trip_details">Detalhes da corrida</string>
    <string name="text_confirm_future_request">Obrigado pela sua reserva. Os detalhes do seu motorista serão enviados 30 minutos antes da sua saída.</string>
    <string name="progress_canceling_trip">Cancelar s corrida.</string>
    <string name="text_ongoing_trip">Corrida em progresso</string>
    <string name="text_future_trip">Corrida ainda não iniciada</string>
    <string name="text_my_bookings">Agendamentos</string>
    <string name="progress_getting_trips">BUSCANDO</string>
    <string name="title_activity_booking_details">Detalhes do Agendamento</string>
    <string name="text_cancel_request">Cancelar Corrida</string>
    <string name="validate_history_date">A data de início deve ser anterior à data atual</string>
    <string name="text_note_referral">"Anote seu código de referência -"</string>
    <string name="text_error_get_image">habilite para obter imagem, tente novamente.</string>
    <string name="text_menu_profile">Perfil</string>
    <string name="text_menu_payment">Pagamentos</string>
    <string name="text_menu_history">Histórico</string>
    <string name="text_menu_referral">Referência</string>
    <string name="text_menu_logout">Sair</string>
    <string name="text_sedan">SEDAN</string>
    <string name="text_bike">BICICLETA</string>
    <string name="text_enter_email">Insira Id do e-mail</string>
    <string name="text_enter_password">Insira a senha</string>
    <string name="text_enter_password_valid">A senha deve ter no mínimo 6 caracteres</string>
    <string name="text_getting_info">Obtendo informação</string>
    <string name="text_wait">Espere</string>
    <string name="text_enter_valid_email">Insira um Id válido de e-mail</string>
    <string name="applicationId">424344554585471</string>
    <string name="text_enter_event_name">Insira o nome do evento</string>
    <string name="text_enter_event_time">Insira a hora do evento</string>
    <string name="text_enter_event_member">Insira os membros do evento</string>
    <string name="text_enter_event_amount">insira o valor máximo</string>
    <string name="text_enter_event_address">Insira o endereço do evento</string>
    <string name="text_enter_name">Insira o primeiro nome</string>
    <string name="text_enter_lname">Insira o último nome</string>
    <string name="text_enter_number">Insira o número</string>
    <string name="text_enter_bio">Insira sua bio</string>
    <string name="text_event_time">Hora do Evento</string>
    <string name="text_event_addrs">Endereço do Evento</string>
    <string name="text_event_member">Membros do evento</string>
    <string name="text_event_max_amount">Total Máimo</string>
    <string name="text_event_name_hint">Insira o nome do evento</string>
    <string name="text_event_addrs_hint">Insira o endereço do evento</string>
    <string name="text_event_time_hint">insira a hora do evento</string>
    <string name="text_event_member_hint">insira os membros do evento</string>
    <string name="text_event_amount_hint">insira o total máximo</string>
    <string name="text_your_referral_code">Código do Cupom</string>
    <string name="text_your_referral_credit">Crédito do Cupom</string>
    <string name="text_share_referral">Compartilhe o código com seus amigos e tenha</string>
    <string name="text_share_referral1">créditos de cupom.</string>
    <string name="text_referral">Cupom</string>
    <string name="text_done">Feito</string>
    <string name="text_event_name">Nome do Evento</string>
</resources>