<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"

    android:orientation="vertical"
    tools:context=".MainDrawerActivity">

    <com.virtugos.uberapp.component.MyFontTextView
        android:id="@+id/copyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/dimen_fp_margin"
        android:paddingTop="@dimen/dimen_fp_margin"
        android:text="@string/text_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:autoLink="web"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/signinRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/copyRight"
        android:orientation="horizontal">

        <com.virtugos.uberapp.component.MyFontButton
            android:id="@+id/btnSignInMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_theme"
            android:gravity="center"
            android:paddingBottom="@dimen/signin_button_padding"
            android:paddingTop="@dimen/signin_button_padding"
            android:text="@string/text_signin"
            android:textColor="@color/white"
            android:textSize="@dimen/size_general" />

        <com.virtugos.uberapp.component.MyFontButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/theme"
            android:gravity="center"
            android:paddingBottom="@dimen/signin_button_padding"
            android:paddingTop="@dimen/signin_button_padding"
            android:text="@string/text_register"
            android:textColor="@color/white"
            android:textSize="@dimen/size_general" />
    </LinearLayout>

    <com.virtugos.uberapp.component.MyFontTextView
        android:id="@+id/myFontTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/app_tag"
        android:textColor="@color/white"
        android:textSize="@dimen/size_menu_name" />
</RelativeLayout>