<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/progressLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_referral_margin_top"
    android:visibility="visible" >

    <com.virtugos.uberapp.component.MyFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_referral"
        android:textColor="@color/black"
        android:textSize="@dimen/size_dialog_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_referral_margin_bottom"
        android:layout_marginTop="@dimen/dimen_referral_margin_top"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/completed_btn_feedback"
            android:paddingTop="@dimen/signin_button_padding"
            android:paddingBottom="@dimen/signin_button_padding"
            android:gravity="center"
            android:orientation="vertical" >

            <com.virtugos.uberapp.component.MyFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_your_referral_code"
                android:textColor="@color/white"
                android:textSize="@dimen/size_general" />

            <com.virtugos.uberapp.component.MyFontTextView
                android:id="@+id/tvReferralCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/size_referral_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/overdue_btn_feedback"
            android:paddingTop="@dimen/signin_button_padding"
            android:paddingBottom="@dimen/signin_button_padding"
            android:gravity="center"
            android:orientation="vertical" >

            <com.virtugos.uberapp.component.MyFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_your_referral_credit"
                android:textColor="@color/white"
                android:textSize="@dimen/size_general" />

            <com.virtugos.uberapp.component.MyFontTextView
                android:id="@+id/tvReferralEarn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/size_referral_code" />
        </LinearLayout>
    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.virtugos.uberapp.component.MyFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_share_referral"
            android:textColor="@color/black"
            android:textSize="@dimen/size_general" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center" >

            <com.virtugos.uberapp.component.MyFontTextView
                android:id="@+id/tv_refferal_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0.00"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/size_general" />

            <com.virtugos.uberapp.component.MyFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_refferal_bonus"
                android:layout_toRightOf="@+id/tv_refferal_bonus"
                android:text="@string/text_share_referral1"
                android:textColor="@color/black"
                android:textSize="@dimen/size_general" />
        </RelativeLayout>
    </LinearLayout>

    <com.virtugos.uberapp.component.MyFontButton
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_theme"
        android:paddingBottom="@dimen/signin_button_padding"
        android:paddingTop="@dimen/signin_button_padding"
        android:gravity="center"
        android:text="@string/text_share"
        android:textColor="@color/white"
        android:textSize="@dimen/size_general" />

</LinearLayout>