<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_event_name"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_event_name_hint"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general" />

                <View
                    android:id="@+id/ivPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full"/>

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_event_addrs"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label" />

                <com.virtugos.uberapp.component.MyFontAutocompleteView
                    android:id="@+id/etEventAddrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_event_addrs_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full" />

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_event_time"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label" />

                <com.virtugos.uberapp.component.MyFontTextView
                    android:id="@+id/tvEventTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_event_time_hint"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full" />

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_event_member"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etEventMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_event_member_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full" />

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_event_max_amount"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etEventAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_event_amount_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full"
                    android:visibility="gone"/>

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_address"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label"
                    android:visibility="gone" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_address"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general"
                    android:visibility="gone" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full"
                    android:visibility="gone"/>

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_bio"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text_label"
                    android:textSize="@dimen/size_label"
                    android:visibility="gone" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_bio"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general"
                    android:visibility="gone" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dimen_fp_margin"
                    android:layout_marginTop="@dimen/dimen_fp_margin"
                    android:background="@color/light_gray_full"
                    android:visibility="gone"/>

                <com.virtugos.uberapp.component.MyFontTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_zip"
                    android:textAllCaps="true"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/size_label"
                    android:visibility="gone" />

                <com.virtugos.uberapp.component.MyFontEdittextView
                    android:id="@+id/etZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_zip"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/color_text_dark"
                    android:textSize="@dimen/size_general"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.virtugos.uberapp.component.MyFontButton
        android:id="@+id/btnAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme"
        android:paddingTop="@dimen/signin_button_padding"
        android:paddingBottom="@dimen/signin_button_padding"
        android:text="@string/text_done"
        android:minHeight="0dp" />

</LinearLayout>